Closed
Bug 1614835
Opened 6 years ago
Closed 6 years ago
Items don't focus when VoiceOver's cursor lands on them
Categories
(Core :: Disability Access APIs, defect, P3)
Tracking
()
VERIFIED
FIXED
mozilla75
Tracking | Status | |
---|---|---|
firefox75 | --- | verified |
People
(Reporter: eeejay, Assigned: eeejay)
Details
(Whiteboard: [mac2020_1])
Attachments
(1 file)
STR:
- Go through focusable items with VoiceOver (ctrl+option+right)
Result:
VoiceOver does not focus items
Expected:
Viewport should focus each item the cursor goes to
Assignee | ||
Updated•6 years ago
|
Summary: Items don't focus into view with VoiceOver cursor → Items don't focus when VoiceOver's cursor lands on them
Assignee | ||
Comment 1•6 years ago
|
||
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ea4df0d263f6
Advertise focusable state to OSX correctly. r=morgan
Comment 3•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox75:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Updated•5 years ago
|
Flags: qe-verify+
Updated•5 years ago
|
QA Whiteboard: [qa-75b-p2]
Comment 4•5 years ago
|
||
I have reproduced this issue using Firefox 75.0a1 (2020.02.11) on macOS 10.15.
I can confirm this issue is fixed, I verified using Firefox macOS 10.15.
You need to log in
before you can comment on or make changes to this bug.
Description
•