Bug 1614835 - Advertise focusable state to OSX correctly. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D62523